--- a/backend/env.example
+++ b/backend/env.example
@@ -1,4 +1,6 @@
 # Database
+# For local development with SQLite: "file:./prisma/dev.db"
+# For production (Vercel): Use Vercel Postgres connection string
 DATABASE_URL="postgresql://user:password@localhost:5432/paggo_db?schema=public"
 
 # JWT Secret (change in production!)
@@ -13,8 +15,14 @@ PORT=3001
 NODE_ENV="development"
 
 # CORS
+# For local: "http://localhost:3000"
+# For production: Your frontend Vercel URL (e.g., "https://your-app.vercel.app")
+# Multiple origins: "https://app1.vercel.app,https://app2.vercel.app"
 FRONTEND_URL="http://localhost:3000"
 
 # File Upload
 MAX_FILE_SIZE=10485760
 UPLOAD_DEST="./uploads"
+
+# Vercel Detection (automatically set by Vercel)
+# VERCEL=1
