--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build",
+    "vercel-build": "npm run prisma:generate && npm run build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -40,6 +41,8 @@
     "multer": "^1.4.5-lts.1",
     "openai": "^4.28.0",
     "passport": "^0.7.0",
+    "serverless-http": "^3.2.0",
+    "express": "^4.18.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdf-lib": "^1.17.1",
