--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,6 +1,10 @@
 # API URL
+# For local: "http://localhost:3001/api"
+# For production: Your backend Vercel URL (e.g., "https://your-backend.vercel.app/api")
 NEXT_PUBLIC_API_URL=http://localhost:3001/api
 
 # NextAuth
+# For local: "http://localhost:3000"
+# For production: Your frontend Vercel URL (e.g., "https://your-app.vercel.app")
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=your-nextauth-secret-change-in-production
