--- a/backend/env.example
+++ b/backend/env.example
@@ -1,7 +1,7 @@
 # Database
-# For local development with SQLite: "file:./prisma/dev.db"
-# For production (Vercel): Use Vercel Postgres connection string
-DATABASE_URL="postgresql://user:password@localhost:5432/paggo_db?schema=public"
+# For local development with Docker: "postgresql://paggo_user:paggo_password@localhost:5432/paggo_db?schema=public"
+# For production (Railway): Railway automatically provides DATABASE_URL
+DATABASE_URL="postgresql://paggo_user:paggo_password@localhost:5433/paggo_db?schema=public"
 
 # JWT Secret (change in production!)
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
